--- a/apworlds.html
+++ b/apworlds.html
@@ -105,7 +105,7 @@
                 <h3><span id="ARobotNamedFight"></span> A Robot Named Fight! (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Game Mod</strong> Download them from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1169389087371841708/1184993903259177091">Link</a>]</li>
+                    <li><strong>APWorld + Game Mod</strong> Download them from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1169389087371841708/1261835999168954438">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/BetaSprite/ARNFArchipelago/blob/main/worlds/ARNF/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1169389087371841708">Link</a>]</li>
                 </ul>
@@ -474,7 +474,7 @@
                 <h3><span id="E"></span><span id="EarthBound"></a> EarthBound (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1077266688657068032/1261559832557916243">Link</a>]</li>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/PinkSwitch/Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1077266688657068032/1261562133284393008">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1077266688657068032">Link</a>]</li>
                 </ul>
@@ -574,7 +574,8 @@
                 <h3><span id="FNAFWorld"></span> FNAF World (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Tracker</strong> Download them from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1195152241250795590">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1262058847397220445">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1195152241250795590">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1104088448127729704/1187854264375193721">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1104088448127729704">Link</a>]</li>
                 </ul>
@@ -1077,7 +1078,7 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Beta APWorld</strong> Download it from the Discord channel [<a href="https://discord.com/channels/731205301247803413/1043592720603693167/1220572862985801798">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/coveleski/rb_tracker/releases">Link</a>]</li>
-                    <li><strong>Tracker (Entrances)</strong> Needs to be loaded from the cogwheel icon [<a href="https://zuils.github.io/pokemon-tracker/">Link</a>]</li>
+                    <li><strong>Tracker (Entrances)</strong> [<a href="https://palex00.github.io/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Pokemon%20Red%20and%20Blue/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1043592720603693167">Link</a>]</li>
                 </ul>
@@ -1264,7 +1265,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Game Mod</strong> [<a href="https://www.speedrun.com/shivers/resources">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/GodlFire/Shivers-Randomizer-CSharp/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/blazik-barth/Shivers-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Shivers/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1192237130005610586">Link</a>]</li>
@@ -1518,7 +1519,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld</strong> Download it from the Discord channel [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1252769111323312179">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Download it from the Discord channel [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1261741077119897661">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/silent-destroyer/tunic-randomizer/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SapphireSapphic/TunicTracker/releases">Link</a>]</li>
                     <li><strong>Tracker (Entrances)</strong> [<a href="https://scipiowright.gitlab.io/tunic-tracker/">Link</a>]</li>
