--- a/index.html
+++ b/index.html
@@ -46,18 +46,54 @@
                     </p>
                 </header>
 
-                <h2 id="D20240713">July 13th, 2024</h2>
+                <h2 id="D20240714">July 14th, 2024</h2>
 
                 <ul>
-                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> FNAF World [<a href="apworlds.html#FNAFWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Hollow Knight [<a href="apworlds.html#HollowKnight">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Bejeweled 3 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Celeste [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240713">July 13th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> A Robot Named Fight! [<a href="apworlds.html#ARobotNamedFight">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> A Robot Named Fight! [<a href="apworlds.html#ARobotNamedFight">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Shivers [<a href="apworlds.html#Shivers">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> The Binding of Isaac: Repentance [<a href="apworlds.html#TheBindingOfIsaacRepentance">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Inscryption [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Salamander County Public Television (SCPTV) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
                     <li><strong>New APWorld</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> TUNIC [<a href="apworlds.html#TUNIC">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -66,6 +102,10 @@
 
                 <ul>
                     <li><strong>New Tracker</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240712">July 12th, 2024</h2>
