--- a/apworlds.html
+++ b/apworlds.html
@@ -838,6 +838,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/Edsploration/MK64-Archipelago/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/SporyTike/Mario-Kart-64-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1124649084544876615/1212684929758920794">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1124649084544876615">Link</a>]</li>
                 </ul>
@@ -1143,7 +1144,7 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/dontjoome/RE3R_AP_World/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/dontjoome/RE3R_AP_Client">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/1085716850370957462/1212095220657692702/1232907046089654314">Link</a>]</li>
-                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1212095220657692702">Link</a>]</li>
+                    <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1261562909809709056">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Reventure"></span> Reventure (PC)</h3>
@@ -1399,7 +1400,7 @@
                 <h3><span id="SuperMarioLand2"></span> Super Mario Land 2 (GB)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1182783218404040814/1255225462075162756">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1182783218404040814/1262196770167980072">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/Alchav/Archipelago/blob/mario-land-2/worlds/marioland2/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1182783218404040814">Link</a>]</li>
                 </ul>
