--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@
 
                 <ul>
                     <li><strong>APWorld Update</strong> FNAF World [<a href="apworlds.html#FNAFWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Super Mario Land 2 [<a href="apworlds.html#SuperMarioLand2">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -61,6 +65,10 @@
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Bejeweled 3 [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Celeste [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Mario Kart 64 [<a href="apworlds.html#MarioKart64">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240713">July 13th, 2024</h2>
