--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (180)</h2>
+                <h2>APWorlds (181)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -403,6 +403,15 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/theUofCWildcat/DKR-Poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/zakwiz/DiddyKongRacingAP/blob/v0.1.0/worlds/diddy_kong_racing/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1057754627795337387">Link</a>]</li>
+                </ul>
+
+                <h3><span id="DigimonWorld"></a> Digimon World (PSX)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Client</strong> [<a href="https://github.com/ArsonAssassin/DWAP">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/ArsonAssassin/DigimonWorldAPTracker/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/ArsonAssassin/DWAP/blob/main/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1224418923861118977">Link</a>]</li>
                 </ul>
 
                 <h3><span id="DLCQuest"></span> DLC Quest (PC)</h3>
@@ -1357,7 +1366,8 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> 5.x.x releases [<a href="https://github.com/agilbert1412/StardewArchipelago/releases">Link</a>]</li>
                     <li><strong>Optional Game Mods</strong> [<a href="https://github.com/agilbert1412/StardewArchipelago/blob/5.x.x/Documentation/Supported%20Mods.md">Link</a>]</li>
-                    <li><strong>Beta APWorld + Game Mod</strong> [<a href="https://drive.google.com/drive/folders/1gtEH3G2cHNIv7cTWn94sfjOh1DvCsVWo">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> 1.6 support [<a href="https://drive.google.com/drive/folders/1gtEH3G2cHNIv7cTWn94sfjOh1DvCsVWo">Link</a>]</li>
+                    <li><strong>Alternate APWorld + Game Mod</strong> Tilesanity - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1225426679904866324/1261612982417227816">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Stardew%20Valley/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090823633099833464">Link</a>]</li>
                 </ul>
@@ -1520,8 +1530,10 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
-                    <li><strong>Beta APWorld</strong> Download it from the Discord channel [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1261741077119897661">Link</a>]</li>
+                    <li><strong>Beta APWorld</strong> Combat Logic + Logic Options - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1261741077119897661">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/silent-destroyer/tunic-randomizer/releases">Link</a>]</li>
+                    <li><strong>Alternate APWorld</strong> Grass Rando - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1262584631514103848">Link</a>]</li>
+                    <li><strong>Alternate Game Mod</strong> Grass Rando - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1262133745100787865">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SapphireSapphic/TunicTracker/releases">Link</a>]</li>
                     <li><strong>Tracker (Entrances)</strong> [<a href="https://scipiowright.gitlab.io/tunic-tracker/">Link</a>]</li>
                     <li><strong>Tracker (Entrances - Alternate)</strong> [<a href="https://tunic.werefox.cafe/">Link</a>]</li>
