--- a/index.html
+++ b/index.html
@@ -46,13 +46,41 @@
                     </p>
                 </header>
 
+                <h2 id="D20240716">July 16th, 2024</h2>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Digimon World [<a href="apworlds.html#DigimonWorld">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Rhythm Heaven Fever [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Rhythm Heaven Megamix [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240715">July 15th, 2024</h2>
+                
+                <ul>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> IKEA: The Co-Worker (Roblox) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240714">July 14th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> FNAF World [<a href="apworlds.html#FNAFWorld">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
-                    <li><strong>APWorld Update</strong> Metroid: Zero Mission [<a href="apworlds.html#MetroidZeroMission">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Super Mario Land 2 [<a href="apworlds.html#SuperMarioLand2">Link</a>]</li>
                 </ul>
