--- a/apworlds.html
+++ b/apworlds.html
@@ -408,7 +408,7 @@
                 <h3><span id="DigimonWorld"></a> Digimon World (PSX)</h3>
 
                 <ul>
-                    <li><strong>APWorld + Client</strong> [<a href="https://github.com/ArsonAssassin/DWAP">Link</a>]</li>
+                    <li><strong>APWorld + Client</strong> [<a href="https://github.com/ArsonAssassin/DWAP/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/ArsonAssassin/DigimonWorldAPTracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ArsonAssassin/DWAP/blob/main/README.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1224418923861118977">Link</a>]</li>
@@ -1143,7 +1143,7 @@
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/FuzzyGamesOn/RE2R_AP_World/releases">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/FuzzyGamesOn/RE2R_AP_Client/releases">Link</a>]</li>
-                    <li><strong>Setup Guide</strong> [<a href="https://github.com/FuzzyGamesOn/RE2R_AP_World/blob/main/README.md">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://fuzzygameson.github.io/RE2R_AP_SetupGuide/">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/1085716850370957462/1259648589039272028">Link</a>]</li>
                 </ul>
 
