--- a/index.html
+++ b/index.html
@@ -46,15 +46,38 @@
                     </p>
                 </header>
 
+                <h2 id="D20240717">July 17th, 2024</h2>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> CTR: Crash Team Racing [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240716">July 16th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> CTR: Crash Team Racing [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Puyo Puyo Tetris 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Rhythm Heaven Fever [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Rhythm Heaven Megamix [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Ultimate Marvel vs. Capcom 3 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
 
                 <ul>
                     <li><strong>New APWorld</strong> Digimon World [<a href="apworlds.html#DigimonWorld">Link</a>]</li>
                 </ul>
 
                 <ul>
-                    <li><strong>Manual APWorld Update</strong> Rhythm Heaven Fever [<a href="apworlds.html#Manual">Link</a>]</li>
-                    <li><strong>Manual APWorld Update</strong> Rhythm Heaven Megamix [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Wobbly Life [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240715">July 15th, 2024</h2>
