--- a/apworlds.html
+++ b/apworlds.html
@@ -179,6 +179,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Beta APWorld + Game Mod</strong> 1.3.x versions [<a href="https://github.com/tioui/Aquaria_Randomizer/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Aquaria/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1257452465272389687">Link</a>]</li>
                 </ul>
