--- a/index.html
+++ b/index.html
@@ -46,10 +46,50 @@
                     </p>
                 </header>
 
+                <h2 id="D20240718">July 18th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Digimon World [<a href="apworlds.html#DigimonWorld">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Tales of Two Wastelands [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240717">July 17th, 2024</h2>
 
                 <ul>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Timespinner [<a href="apworlds.html#Timespinner">Link</a>]</li>
+                </ul>
+                
+                <ul>
                     <li><strong>Manual APWorld Update</strong> CTR: Crash Team Racing [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Wobbly Life [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta Game Mod</strong> Aquaria [<a href="apworlds.html#Aquaria">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240716">July 16th, 2024</h2>
