--- a/index.html
+++ b/index.html
@@ -46,14 +46,34 @@
                     </p>
                 </header>
 
+                <h2 id="D20240719">July 19th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Castlevania: Circle of the Moon [<a href="apworlds.html#CastlevaniaCircleOfTheMoon">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Lingo [<a href="apworlds.html#Lingo">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Ocarina of Time [<a href="apworlds.html#OcarinaOfTime">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240718">July 18th, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Brotato [<a href="apworlds.html#Brotato">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Digimon World [<a href="apworlds.html#DigimonWorld">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Into the Breach [<a href="apworlds.html#IntoTheBreach">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Lethal Company [<a href="apworlds.html#LethalCompany">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
                 </ul>
 
                 <ul>
@@ -62,10 +82,13 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Dredge [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> IKEA: The Co-Worker (Roblox) [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Tales of Two Wastelands [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Tracker Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
                     <li><strong>Tracker Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
                 </ul>
 
