--- a/apworlds.html
+++ b/apworlds.html
@@ -50,7 +50,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (181)</h2>
+                <h2>APWorlds (185)</h2>
 
                 <a href="#09">0-9</a>
                 <a href="#A">A</a>
@@ -164,6 +164,16 @@
                     <li><strong>Tracker</strong> [<a href="https://github.com/SporyTike/ANIMAL-WELL-AP-Tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/ScipioWright/Archipelago-SW/blob/animal-well/worlds/animal_well/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1238463626344665119">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Anodyne"></span> Anodyne (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/PixieCatSupreme/ArchipelagoAno/releases">Link</a>]</li>
+                    <li><strong>Game Download</strong> [<a href="https://pixiecatsupreme.itch.io/anodyne-sharp">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/SephDB/AnodyneArchipelagoClient/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/PixieCatSupreme/ArchipelagoAno/blob/anodyne/worlds/anodyne/docs/setup_en.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1121290232688545792">Link</a>]</li>
                 </ul>
 
                 <h3><span id="ApeEscape"></span> Ape Escape (PSX)</h3>
@@ -392,6 +402,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/Marechal-L/Dark-Souls-III-Archipelago-client/releases">Link</a>]</li>
+                    <li><strong>Beta APWorld + Game Mod</strong> [<a href="https://github.com/nex3/Dark-Souls-III-Archipelago-client/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/Br00ty/DS3_AP_Maptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Dark%20Souls%20III/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1005246392329052220">Link</a>]</li>
@@ -484,8 +495,7 @@
                 <h3><span id="E"></span><span id="EarthBound"></a> EarthBound (SNES)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> [<a href="https://github.com/PinkSwitch/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1077266688657068032/1261562133284393008">Link</a>]</li>
+                    <li><strong>APWorld + Tracker</strong> [<a href="https://github.com/PinkSwitch/Archipelago/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1077266688657068032">Link</a>]</li>
                 </ul>
 
@@ -682,6 +692,16 @@
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1127025077196701828">Link</a>]</li>
                 </ul>
 
+                <h3><span id="IttleDew2"></span> Ittle Dew 2+ (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod</strong> [<a href="https://github.com/Extra-2-Dew/ArchipelagoRandomizer/releases">Link</a>]</li>
+                    <li><strong>Optional Game Mods</strong> [<a href="https://github.com/Extra-2-Dew/DebugMenuCheats/releases">Link</a>] [<a href="https://github.com/Extra-2-Dew/QualityOfLife">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/arborelia/ittledew2-poptracker/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/Extra-2-Dew/ArchipelagoRandomizer/blob/main/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1260030530217574500">Link</a>]</li>
+                </ul>
+
                 <h3><span id="J"></span><span id="JakAndDaxter"></span> Jak and Daxter (PS2)</h3>
 
                 <ul>
@@ -697,6 +717,13 @@
                     <li><strong>Game Mod</strong> [<a href="https://steamcommunity.com/sharedfiles/filedetails/?id=3247225189">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/GreenPower713/Archipelago/blob/main/worlds/ktane/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1058549067107532840">Link</a>]</li>
+                </ul>
+
+                <h3><span id="Kindergarten2"></span> Kindergarten 2 (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld + Game Mod + Setup Guide</strong> [<a href="https://github.com/agilbert1412/Archipelagarten/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/1085716850370957462/1240820918343700562">Link</a>]</li>
                 </ul>
 
                 <h3><span id="KingdomHearts1"></span> Kingdom Hearts 1 Final Mix (PC)</h3>
@@ -724,6 +751,13 @@
                     <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1087405565069766756/1261421354784391228">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1087405565069766756/1088418720906498088">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1087405565069766756">Link</a>]</li>
+                </ul>
+
+                <h3><span id="KingdomHeartsBirthBySleep"></span> Kingdom Hearts Birth by Sleep (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/gaithernOrg/ArchipelagoKHBBS/releases">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1158149027385319434">Link</a>]</li>
                 </ul>
 
                 <h3><span id="KingdomHeartsReChainOfMemories"></span> Kingdom Hearts Re:Chain of Memories (PC)</h3>
@@ -1240,7 +1274,7 @@
                 <h3><span id="SeaOfThieves"></span> Sea of Thieves (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1259672458806689802">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1264335230815309856">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1259672458806689802">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1225633406088646746">Link</a>]</li>
                 </ul>
@@ -1533,8 +1567,7 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Beta APWorld</strong> Combat Logic + Logic Options - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1261741077119897661">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/silent-destroyer/tunic-randomizer/releases">Link</a>]</li>
-                    <li><strong>Alternate APWorld</strong> Grass Rando - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1262584631514103848">Link</a>]</li>
-                    <li><strong>Alternate Game Mod</strong> Grass Rando - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1262133745100787865">Link</a>]</li>
+                    <li><strong>Alternate APWorld + Game Mod</strong> Grass Rando - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1224388891948093540/1264316097419808829">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/SapphireSapphic/TunicTracker/releases">Link</a>]</li>
                     <li><strong>Tracker (Entrances)</strong> [<a href="https://scipiowright.gitlab.io/tunic-tracker/">Link</a>]</li>
                     <li><strong>Tracker (Entrances - Alternate)</strong> [<a href="https://tunic.werefox.cafe/">Link</a>]</li>
@@ -1608,7 +1641,7 @@
                 <h3><span id="Wargroove2"></span> Wargroove 2 (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1261067294780686367">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1159482310652076082/1264645125276041267">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/FlySniper/Archipelago/blob/wargroove2/worlds/wargroove2/docs/wargroove2_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1159482310652076082">Link</a>]</li>
                 </ul>
