--- a/index.html
+++ b/index.html
@@ -46,6 +46,117 @@
                     </p>
                 </header>
 
+                <h2 id="D20240722">July 22nd, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Final Fantasy XIV [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> MultiVersus (Rifts) [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>New Manual APWorld</strong> Stray [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> EarthBound [<a href="apworlds.html#EarthBound">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240721">July 21st, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Gauntlet Legends [<a href="apworlds.html#GauntletLegends">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> MetroCUBEvania [<a href="apworlds.html#MetroCUBEvania">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon Crystal [<a href="apworlds.html#PokemonCrystal">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wargroove 2 [<a href="apworlds.html#Wargroove2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> MetroCUBEvania [<a href="apworlds.html#MetroCUBEvania">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Psychonauts [<a href="apworlds.html#Psychonauts">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Paper Mario: The Thousand-Year Door [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Wobbly Life [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Kindergarten 2 [<a href="apworlds.html#Kindergarten2">Link</a>]</li>
+                    <li><strong>New APWorld</strong> Kingdom Hearts: Birth by Sleep [<a href="apworlds.html#KingdomHeartsBirthBySleep">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> MCParks (Minecraft) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Pokemon FireRed and LeafGreen [<a href="apworlds.html#PokemonFireRedAndLeafGreen">Link</a>]</li>
+                    <li><strong>Tracker Update</strong> Pokemon Red and Blue [<a href="apworlds.html#PokemonRedAndBlue">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240720">July 20th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXII">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Oracle of Seasons [<a href="apworlds.html#OracleOfSeasons">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sea of Thieves [<a href="apworlds.html#SeaOfThieves">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Final Fantasy XII: Open World [<a href="apworlds.html#FinalFantasyXII">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Hades [<a href="apworlds.html#Hades">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Yacht Dice [<a href="apworlds.html#YachtDice">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Magic: The Gathering (Arena / Online) [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New APWorld</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Beta APWorld</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>    
+                    <li><strong>New Beta Game Mod</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> PokemonTCG Live [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Tracker</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Banjo-Tooie [<a href="apworlds.html#BanjoTooie">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240719">July 19th, 2024</h2>
 
                 <ul>
