--- a/index.html
+++ b/index.html
@@ -46,6 +46,22 @@
                     </p>
                 </header>
 
+                <h2 id="D20240723">July 23rd, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                </ul>
+                
+                <ul>
+                    <li><strong>Game Mod Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Mario Kart 8 Deluxe [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240722">July 22nd, 2024</h2>
 
                 <ul>
@@ -54,6 +70,7 @@
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> A Short Hike [<a href="apworlds.html#AShortHike">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> Hatsune Miku: Project DIVA Mega Mix+ [<a href="apworlds.html#HatsuneMikuProjectDIVAMegaMix">Link</a>]</li>
                 </ul>
 
