--- a/apworlds.html
+++ b/apworlds.html
@@ -983,6 +983,7 @@
 
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
+                    <li><strong>Alternate APWorld</strong> Advanced ER - Download from Discord [<a href="https://discord.com/channels/731205301247803413/1090819435893362768/1265685905146908682">Link</a>]</li>
                     <li><strong>Tracker</strong> Opened from the game client (Magpie button)</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Links%20Awakening%20DX/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1090819435893362768">Link</a>]</li>
