--- a/index.html
+++ b/index.html
@@ -46,20 +46,41 @@
                     </p>
                 </header>
 
+                <h2 id="D20240724">July 24th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
+                </ul>
+
                 <h2 id="D20240723">July 23rd, 2024</h2>
 
                 <ul>
                     <li><strong>APWorld Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Diddy Kong Racing [<a href="apworlds.html#DiddyKongRacing">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                 </ul>
                 
                 <ul>
                     <li><strong>Game Mod Update</strong> Balatro [<a href="apworlds.html#Balatro">Link</a>]</li>
                     <li><strong>Game Mod Update</strong> ChecksMate [<a href="apworlds.html#ChecksMate">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> DLC Quest [<a href="apworlds.html#DLCQuest">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Manual APWorld Update</strong> Baldi's Basics Classic Remastered [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Kirby and the Forgotten Land [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Mario Kart 8 Deluxe [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Tracker Update</strong> Ittle Dew 2+ [<a href="apworlds.html#IttleDew2">Link</a>]</li>
                 </ul>
 
                 <h2 id="D20240722">July 22nd, 2024</h2>
