--- a/apworlds.html
+++ b/apworlds.html
@@ -51,7 +51,7 @@
                     </p>
                 </header>
 
-                <h2>APWorlds (185)</h2>
+                <h2>APWorlds (186)</h2>
 
                 <small><a href="#AHatInTime">A Hat in Time (PC)</a></small>
                 <small><a href="#ALinkToThePast">A Link to the Past (SNES)</a></small>
@@ -135,6 +135,7 @@
                 <small><a href="#Landstalker">Landstalker - The Treasures of King Nole (GEN)</a></small>
                 <small><a href="#LeagueOfLegends">League of Legends (PC)</a></small>
                 <small><a href="#LethalCompany">Lethal Company (PC)</a></small>
+                <small><a href="#LilGatorGame">Lil Gator Game (PC)</a></small>
                 <small><a href="#Lingo">Lingo (PC)</a></small>
                 <small><a href="#LinksAwakeningDX">Link's Awakening DX (GBC)</a></small>
                 <small><a href="#LittleWitchNobeta">Little Witch Nobeta (PC)</a></small>
@@ -331,6 +332,7 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/PixieCatSupreme/ArchipelagoAno/releases">Link</a>]</li>
                     <li><strong>Game Download</strong> [<a href="https://pixiecatsupreme.itch.io/anodyne-sharp">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/SephDB/AnodyneArchipelagoClient/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1121290232688545792/1266797585146970122">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/PixieCatSupreme/ArchipelagoAno/blob/anodyne/worlds/anodyne/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1121290232688545792">Link</a>]</li>
                 </ul>
@@ -967,6 +969,16 @@
                     <li><strong>Game Mod</strong> [<a href="https://thunderstore.io/c/lethal-company/p/APLC/APLC/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/T0r1nn/APLC/blob/main/APLC_apworld/lethal_company/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1183860023147896942">Link</a>]</li>
+                </ul>
+
+                <h3><span id="LilGatorGame"></span> Lil Gator Game (PC)</h3>
+
+                <ul>
+                    <li><strong>APWorld</strong> [<a href="https://github.com/natronium/GatorArchipelago/releases">Link</a>]</li>
+                    <li><strong>Game Mod</strong> [<a href="https://github.com/natronium/GatorRando/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/natronium/GatorPop/releases">Link</a>]</li>
+                    <li><strong>Setup Guide</strong> [<a href="https://github.com/natronium/GatorArchipelago/blob/main/README.md">Link</a>]</li>
+                    <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1084922067469734039">Link</a>]</li>
                 </ul>
 
                 <h3><span id="Lingo"></span> Lingo (PC)</h3>
@@ -1704,7 +1716,7 @@
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mod</strong> 5.x.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
                     <li><strong>Beta APWorld</strong> 0.5.0 releases [<a href="https://github.com/NewSoupVi/Archipelago/releases">Link</a>]</li>
-                    <li><strong>Beta Game Mod</strong> 6.x.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
+                    <li><strong>Beta Game Mod</strong> 6.1.x releases [<a href="https://github.com/NewSoupVi/The-Witness-Randomizer-for-Archipelago/releases">Link</a>]</li>
                     <li><strong>Tracker</strong> [<a href="https://github.com/NewSoupVi/witness_archipelago_tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/The%20Witness/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/980554001231786014">Link</a>]</li>
