--- a/apworlds.html
+++ b/apworlds.html
@@ -1339,6 +1339,7 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Game Mods</strong> [<a href="https://www.raftmodding.com/loader">Link</a>] [<a href="https://www.raftmodding.com/mods/modutils">Link</a>] [<a href="https://www.raftmodding.com/mods/raftipelago">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/PrimePentad/Raft-AP-Poptracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Raft/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/937206960472883243">Link</a>]</li>
                 </ul>
@@ -1444,7 +1445,7 @@
                 <h3><span id="SeaOfThieves"></span> Sea of Thieves (PC)</h3>
 
                 <ul>
-                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1264335230815309856">Link</a>]</li>
+                    <li><strong>APWorld</strong> Download it from the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1266608861633314848">Link</a>]</li>
                     <li><strong>Setup Guide</strong> Read it in the Discord thread [<a href="https://discord.com/channels/731205301247803413/1225633406088646746/1259672458806689802">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1225633406088646746">Link</a>]</li>
                 </ul>
