--- a/index.html
+++ b/index.html
@@ -46,13 +46,76 @@
                     </p>
                 </header>
 
-                <h2 id="D20240728">July 28th, 2024</h2>
+                <h2 id="D20240730">July 30th, 2024</h2>
 
                 <ul>
-                    <li><strong>Manual APWorld Update</strong> MultiVersus (Rifts) [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
                 </ul>
 
                 <ul>
+                    <li><strong>Game Mod Update</strong> Anodyne [<a href="apworlds.html#Anodyne">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Library of Ruina [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Super Mario Galaxy [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Super Mario Galaxy 2 [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240729">July 29th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Kingdom Hearts Birth by Sleep [<a href="apworlds.html#KingdomHeartsBirthBySleep">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Mario Kart 64 [<a href="apworlds.html#MarioKart64">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Old School RuneScape [<a href="apworlds.html#OldSchoolRuneScape">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Blasphemous [<a href="apworlds.html#Blasphemous">Link</a>]</li>
+                    <li><strong>Game Mod Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Mario and Luigi: Partners in Time [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Resident Evil 5 Gold Edition [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <h2 id="D20240728">July 28th, 2024</h2>
+
+                <ul>
+                    <li><strong>APWorld Update</strong> Metroid Prime [<a href="apworlds.html#MetroidPrime">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Wario Land 4 [<a href="apworlds.html#WarioLand4">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta APWorld Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta APWorld Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Beta Game Mod Update</strong> Dark Souls III [<a href="apworlds.html#DarkSoulsIII">Link</a>]</li>
+                    <li><strong>Beta Game Mod Update</strong> Stardew Valley [<a href="apworlds.html#StardewValley">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Game Mod Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>Manual APWorld Update</strong> Inscryption [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Mario and Luigi: Bowser's Inside Story [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> MultiVersus (Rifts) [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Super Mario Odyssey [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Super Street Fighter II Turbo [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> The Grinch [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> The SpongeBob SquarePants Movie [<a href="apworlds.html#Manual">Link</a>]</li>
+                </ul>
+
+                <ul>
+                    <li><strong>New Manual APWorld</strong> Bully: Scholarship Edition [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>New Manual APWorld</strong> The SpongeBob SquarePants Movie [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
@@ -62,6 +125,7 @@
                     <li><strong>APWorld Update</strong> Kingdom Hearts 1 Final Mix [<a href="apworlds.html#KingdomHearts1">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Lunacid [<a href="apworlds.html#Lunacid">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Outer Wilds [<a href="apworlds.html#OuterWilds">Link</a>]</li>
+                    <li><strong>APWorld Update</strong> Sea of Thieves [<a href="apworlds.html#SeaOfThieves">Link</a>]</li>
                     <li><strong>APWorld Update</strong> Sonic Adventure DX [<a href="apworlds.html#SonicAdventureDX">Link</a>]</li>
                 </ul>
 
@@ -78,6 +142,7 @@
 
                 <ul>
                     <li><strong>Manual APWorld Update</strong> Geometry Dash [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Mario and Luigi: Dream Team [<a href="apworlds.html#Manual">Link</a>]</li>
                     <li><strong>Manual APWorld Update</strong> Pokemon Snap [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
