--- a/apworlds.html
+++ b/apworlds.html
@@ -332,7 +332,7 @@
                     <li><strong>APWorld</strong> [<a href="https://github.com/PixieCatSupreme/ArchipelagoAno/releases">Link</a>]</li>
                     <li><strong>Game Download</strong> [<a href="https://pixiecatsupreme.itch.io/anodyne-sharp">Link</a>]</li>
                     <li><strong>Game Mod</strong> [<a href="https://github.com/SephDB/AnodyneArchipelagoClient/releases">Link</a>]</li>
-                    <li><strong>Tracker</strong> Download from Discord [<a href="https://discord.com/channels/731205301247803413/1121290232688545792/1266797585146970122">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/palex00/anodyne-ap-tracker/releases">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://github.com/PixieCatSupreme/ArchipelagoAno/blob/anodyne/worlds/anodyne/docs/setup_en.md">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1121290232688545792">Link</a>]</li>
                 </ul>
@@ -918,6 +918,7 @@
 
                 <ul>
                     <li><strong>APWorld</strong> [<a href="https://github.com/gaithernOrg/ArchipelagoKHBBS/releases">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/SilentBrow/BBSPopTracker/releases">Link</a>]</li>
                     <li><strong>Discord Thread</strong> [<a href="https://discord.com/channels/731205301247803413/1158149027385319434">Link</a>]</li>
                 </ul>
 
