--- a/apworlds.html
+++ b/apworlds.html
@@ -1770,7 +1770,8 @@
                 <ul>
                     <li><strong>Officially supported and distributed with Archipelago</strong></li>
                     <li><strong>Beta APWorld</strong> Download it from the Discord channel [<a href="https://discord.com/channels/731205301247803413/1148330675452264499/1196534846365896825">Link</a>]</li>
-                    <li><strong>Tracker</strong> [<a href="https://jonloveslegos.github.io/undertale-tracker/">Link</a>]</li>
+                    <li><strong>Tracker</strong> [<a href="https://github.com/jonloveslegos/undertale-ap-poptracker/releases">Link</a>]</li>
+                    <li><strong>Tracker (Entrances)</strong> [<a href="https://jonloveslegos.github.io/undertale-tracker/">Link</a>]</li>
                     <li><strong>Setup Guide</strong> [<a href="https://archipelago.gg/tutorial/Undertale/setup/en">Link</a>]</li>
                     <li><strong>Discord Channel</strong> [<a href="https://discord.com/channels/731205301247803413/1148330675452264499">Link</a>]</li>
                 </ul>
