--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
                 </ul>
 
                 <ul>
-                    <li><strong>Manual APWorld Update</strong></li> Mario 3D World [<a href="apworlds.html#Manual">Link</a>]</li>
-                    <li><strong>Manual APWorld Update</strong></li> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
-                    <li><strong>Manual APWorld Update</strong></li> Peggle Nights [<a href="apworlds.html#Manual">Link</a>]</li>
-                    <li><strong>Manual APWorld Update</strong></li> Pokemon Platinum [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Mario 3D World [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Peggle Nights [<a href="apworlds.html#Manual">Link</a>]</li>
+                    <li><strong>Manual APWorld Update</strong> Pokemon Platinum [<a href="apworlds.html#Manual">Link</a>]</li>
                 </ul>
 
                 <ul>
